# stations-api

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: python-testing.yml  serverless-deploy.yml
.serverless/: cloudformation-template-update-stack.json  requirements  requirements.txt  serverless-state.json
stations_api/: api.py  app.py  configuration.py  secret_manager.py
stations_api/data/: database_service.py  stations_repository.py
stations_api/models/: station.py
tests/: test_stations_api.py
